--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
   /**
   @font family declaration
   */
-  --tp-ff-body: 'Roboto', sans-serif;
+  --tp-ff-body: '', sans-serif;
   --tp-ff-heading: 'Roboto', sans-serif;
   --tp-ff-p: 'Roboto', sans-serif;
   --tp-ff-fontawesome: "Font Awesome 6 Pro";
